fixed overflow sizing issue

--- a/src/components/ui/Table.module.css
+++ b/src/components/ui/Table.module.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 0;
 }
 
 .filterContainer {
@@ -19,6 +20,7 @@
 
 .tableContainer {
   overflow: auto;
+  width: 100%;
 }
 
 .table {
